<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_formulir"
            android:icon="@drawable/img"
            android:title="@string/nav_formulir"/>

        <item
            android:id="@+id/nav_kalkulator"
            android:icon="@drawable/img_2"
            android:title="@string/nav_kalkulator"/>

        <item
            android:id="@+id/nav_warung"
            android:icon="@drawable/img_3"
            android:title="@string/nav_warung"/>

        <item
            android:id="@+id/nav_konversi"
            android:icon="@drawable/img_1"
            android:title="@string/nav_konversi"/>

        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/img"
            android:title="@string/nav_profil"/>
    </group>

</menu>