<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bg"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hasil Formulir"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:id="@+id/tvIsiAja"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="120dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@drawable/untukprofil1"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvIsiAja">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_name"
                android:textColor="@color/text"
                android:id="@+id/Nama"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_address"
                android:textColor="@color/text"
                android:id="@+id/Alamat"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:text="@string/result_phone"
                android:id="@+id/Nomor"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_religion"
                android:textColor="@color/text"
                android:id="@+id/Agama"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_gender"
                android:id="@+id/JenisKelamin"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_hobby"
                android:id="@+id/Kegemaran"
                android:textColor="@color/text"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>