<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bg"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TerimakasihMuach"
                android:fontFamily="@font/poppins_light"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:id="@+id/tvIsiAja"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_name"
                android:textColor="@color/text"
                android:id="@+id/tvNamaPemesan"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_details"
                android:textColor="@color/text"
                android:id="@+id/tvDetailPesanan"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:text="@string/total_payment"
                android:id="@+id/tvTotalBayar"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>